# ssh-chater

./: .gitignore  README.md  pyproject.toml
src/: client.py  server.py  ui.py  vertical_layout.tcss
src/database/: __init__.py
src/database/models/: base.py  users.py
src/database/queries/: users.py
src/ui/: __init__.py  widgets.py
